# wardrobe

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  Taskfile.yml  compose.yaml  pyproject.toml  wardrobe_app_design.md
backend/: __init__.py
backend/app/: main.py
backend/app/application/: __init__.py  phase0.py  service_status.py
backend/app/application/clothing_items/: __init__.py  dtos.py  errors.py  inputs.py  ports.py  results.py  use_cases.py
backend/app/core/: __init__.py  config.py
backend/app/domain/: __init__.py  item.py  status.py
backend/app/infrastructure/: __init__.py
backend/app/infrastructure/embedding/: deterministic_image_embedding_provider.py
backend/app/infrastructure/storage/: json_clothing_item_repository.py  local_image_storage.py
backend/app/infrastructure/vector/: chroma_item_vector_repository.py
backend/app/infrastructure/vision/: rule_based_attribute_extractor.py
backend/app/presentation/: __init__.py
backend/app/presentation/api/: __init__.py  dependencies.py  routes.py  schemas.py
backend/tests/: test_item_registration_api.py  test_service_status_api.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  main.tsx  styles.css
frontend/tests/: README.md
tests/: test_phase0_api.py
