[project]
name = "wardrobe"
version = "0.1.0"
description = "Wardrobe management and outfit suggestion app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "chromadb>=1.0,<2.0",
  "fastapi>=0.115,<1.0",
  "pydantic-settings>=2.7,<3.0",
  "uvicorn[standard]>=0.32,<1.0",
]

[dependency-groups]
dev = [
  "httpx>=0.27,<1.0",
  "mypy>=1.13,<2.0",
  "pytest>=8.3,<9.0",
  "ruff>=0.8,<1.0",
]

[tool.ruff]
line-length = 100
src = ["backend", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = [
  "B",
  "C4",
  "E",
  "F",
  "I",
  "N",
  "UP",
  "W",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
pretty = true
files = ["backend", "tests"]

[tool.pytest.ini_options]
pythonpath = ["."]
